# azure_ai_foundry_demo

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/azure_ai_foundry_demo/: config.py  models.py  streamlit_app.py  workflow.py
src/azure_ai_foundry_demo/agents/: __init__.py  orchestrator.py  prompt_builders.py  runner.py  stage_models.py  stage_specs.py  tooling.py  utils.py
src/azure_ai_foundry_demo/clients/: __init__.py  polygon.py  serper.py
tests/: __init__.py  test_config.py  test_polygon_client.py  test_prompt_builders.py  test_runner.py  test_serper_client.py  test_tooling.py  test_utils.py  test_workflow.py
